@@ -29,6 +29,9 @@ which = "7.0.2"
 rcue = "0.1.3"
 hhmmss = "0.1.0"
 
+[features]
+libav = ["bliss-audio/ffmpeg"]
+
 [dependencies.bliss-audio]
 default-features = false
 features = ["aubio-static"]
