@@ -8,14 +8,26 @@
 
 extern crate rcue;
 
+#[cfg(not(feature = "libav"))]
 use crate::db;
+#[cfg(not(feature = "libav"))]
 use rcue::parser::parse_from_file;
 use std::path::PathBuf;
+#[cfg(not(feature = "libav"))]
 use std::time::Duration;
 
+#[cfg(not(feature = "libav"))]
 pub const LAST_TRACK_DURATION:u64 = 60*60*24;
+#[cfg(not(feature = "libav"))]
 const GENRE:&str = "GENRE";
 
+#[cfg(feature = "libav")]
+#[derive(Clone)]
+pub struct CueTrack {
+    pub track_path:PathBuf
+}
+
+#[cfg(not(feature = "libav"))]
 #[derive(Clone)]
 pub struct CueTrack {
     pub audio_path:PathBuf,
@@ -29,6 +41,7 @@ pub struct CueTrack {
     pub duration:Duration
 }
 
+#[cfg(not(feature = "libav"))]
 pub fn parse(audio_path:&PathBuf, cue_path:&PathBuf) -> Vec<CueTrack> {
     let mut resp:Vec<CueTrack> = Vec::new();
 
