@@ -2,7 +2,9 @@
 -----
 1. Add support for (DSD) WavPack - thanks to Bart Lauret
 2. Update version of bliss library.
-3. Use 'ffmpeg' commandline to decode files, and not ffmpeg libraries.
+3. Use 'ffmpeg' commandline to decode files, and not ffmpeg libraries by
+   defualt. Pass "--features=libav" to cargo to build against ffmpeg
+   libraries.
 
 0.2.3
 -----
